# gameboy-emulator

./: CMakeLists.txt  README.md  cpu.h  requirements.txt
.github/workflows/: cunit_test.yml
include/: cartridge.h  cpu.h  mmu.h  ppu.h
src/: cartridge.c  cpu.c  loop.c  main.c  mmu.c  ppu.c  testInstr.c
src/Instructions/: arithmetic.c  arithmetic.h  bitmanip.c  bitmanip.h  extended.c  extended.h  instructions.c  movement.c  movement.h
src/mmu/: mmu.h
tests/: CMakeLists.txt  test_arithmetic.c  test_cartridge.c  test_extended.c  test_movement.c  test_suite.c
